# atlas

./: .gitignore  README.md  cohort.py  pyproject.toml
benchmarks/: bench.py  bench_bitmap_pruning.py  bench_codecs.py  codec_results.json  results.json
cohort-lib/: Cargo.toml
cohort-lib/src/: annotate.rs  bitmap_index.rs  catalog.rs  diff.rs  duckdb_engine.rs  inspect.rs  lib.rs  merge.rs  models.rs  mutate.rs  offset_reader.rs  partition.rs  query_engine.rs  reader.rs  selector_pruner.rs  table_provider.rs  tests.rs  writer.rs
cohort-sdk/: .gitignore  Cargo.toml  README.md  pyproject.toml
cohort-sdk/python/cohort_sdk/: __init__.py  __main__.py  cli.py  iceberg.py  models.py  reader.py  snowflake.py  writer.py
cohort-sdk/src/: lib.rs
cohort-sdk/tests/: test_cohort.py
cohort_viz/: __main__.py  atlas_kohort.py  benchmarks.py  format_variants.py  index.html  server.py  similarity_engine.py
policies/: universes.json
policies/policies/: atlas_enterprise_full.json  cardiomed_analytics.json  commercial_womens_health.json  commercialcare_partners.json  emergency_medicine_research.json  inpatient_insights.json  inpatient_outcomes_study.json  lonestar_health.json  medicare_insights.json  nationwide_analytics.json  pediatric_medicaid_access.json  texas_comprehensive.json  texas_only.json  texas_womens_health.json  womens_health_institute.json
scripts/: generate_sample_data.py
