[package]
name = "cohort-lib"
version = "0.1.0"
edition = "2021"
description = "Reader/writer for the .cohort binary container format (v3)"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parquet = "57.0"
arrow = { version = "57.0", features = ["ipc_compression"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
byteorder = "1.4"
bytes = "1"
datafusion = "51.0"
async-trait = "0.1"
futures = "0.3"
vortex = { version = "0.58", features = ["tokio"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
roaring = "0.10"
duckdb = { git = "https://github.com/duckdb/duckdb-rs", features = ["bundled"], optional = true }
tempfile = { version = "3", optional = true }

[features]
default = []
duckdb = ["dep:duckdb", "dep:tempfile"]

[dev-dependencies]
tempfile = "3"
