[package]
name = "cohort-sdk"
version = "0.1.0"
edition = "2021"

[lib]
name = "_cohort_rs"
crate-type = ["cdylib"]

[dependencies]
cohort-lib = { path = "../cohort-lib" }
pyo3 = { version = "0.26", features = ["extension-module"] }
arrow = { version = "57.0", features = ["pyarrow"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
