[project]
name = "cohort-sdk"
version = "0.1.0"
description = "Python SDK for reading and writing .cohort binary container files (v3)"
requires-python = ">=3.11, <3.14"
dependencies = [
    "pydantic>=2.0",
    "pyarrow>=15.0",
    "snowflake-connector-python>=3.6.0",
    "pyiceberg[glue]>=0.7.0",
    "s3fs>=2024.0.0",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.0,<2.0",
    "pytest>=8.0",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "cohort_sdk._cohort_rs"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
